--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link href="main.css" rel="stylesheet" type="text/css" />
 		<link rel="stylesheet" href="https://use.typekit.net/dgm1icd.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="icon" href="favicon.png">
 	</head>
 
 	<body>
