--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="icon" href="favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<script type="script.js"></script>
 	</head>
 
 	<body>
@@ -43,9 +44,9 @@
 		<div class="holdin">
 	<div class="row">
 			<div id="FirstImage">
-				<div class="container">
-  					<img src="https://is4-ssl.mzstatic.com/image/thumb/Music113/v4/95/8f/0c/958f0c03-7209-70fd-50e2-3e0738a938e7/628810896233.png/540x540bb.jpg" alt="i cant rap" class="image">
-  						<div class="overlay"> 
+				<div class="container" ontouchstart="">
+  					<img src="https://is4-ssl.mzstatic.com/image/thumb/Music113/v4/95/8f/0c/958f0c03-7209-70fd-50e2-3e0738a938e7/628810896233.png/540x540bb.jpg" alt="i cant rap" class="image" ontouchstart="">
+  						<div class="overlay" ontouchstart=""> 
     						<div class="text"><em><strong>I Can't Rap</strong></em></div>
     					</div>
 				</div>
@@ -72,9 +73,9 @@
 			</div>
 
 			<div id="SecondImage">
-				<div class="container">
-  					<img src="https://is2-ssl.mzstatic.com/image/thumb/Music113/v4/56/9c/cc/569ccc96-9e17-8e12-ed9e-7acec9be9fd1/628810904037.png/540x540bb.jpg" alt="you're making me uncomfortable" class="image">
-  						<div class="overlay"> 
+				<div class="container" ontouchstart="">
+  					<img src="https://is2-ssl.mzstatic.com/image/thumb/Music113/v4/56/9c/cc/569ccc96-9e17-8e12-ed9e-7acec9be9fd1/628810904037.png/540x540bb.jpg" alt="you're making me uncomfortable" class="image" ontouchstart="">
+  						<div class="overlay" ontouchstart=""> 
     						<div class="text"><em><strong>You're Making Me Uncomfortable</strong></em></div>
     					</div>
 				</div>
@@ -103,9 +104,9 @@
 		</div>
 		<div class="row">
 			<div id="ThirdImage">
-				<div class="container">
-  					<img src="https://is3-ssl.mzstatic.com/image/thumb/Music113/v4/5f/0d/be/5f0dbe37-afea-7458-ed3c-66ba845175d6/672985010642.png/540x540bb.jpg" alt="i got left on read" class="image">
-  						<div class="overlay"> 
+				<div class="container" ontouchstart="">
+  					<img src="https://is3-ssl.mzstatic.com/image/thumb/Music113/v4/5f/0d/be/5f0dbe37-afea-7458-ed3c-66ba845175d6/672985010642.png/540x540bb.jpg" alt="i got left on read" class="image" ontouchstart="">
+  						<div class="overlay" ontouchstart=""> 
     						<div class="text"><em><strong>I Got Left on Read</strong></em></div>
     					</div>
 				</div>
@@ -134,9 +135,9 @@
 
 
 			<div id="FourthImage">
-				<div class="container">
-  					<img src="https://is5-ssl.mzstatic.com/image/thumb/Music113/v4/f4/a4/d5/f4a4d5c3-9a9d-9a26-a95a-53e7c4e67483/672985298514.png/540x540bb.jpg" alt="im dropping out" class="image">
-  						<div class="overlay"> 
+				<div class="container" ontouchstart="">
+  					<img src="https://is5-ssl.mzstatic.com/image/thumb/Music113/v4/f4/a4/d5/f4a4d5c3-9a9d-9a26-a95a-53e7c4e67483/672985298514.png/540x540bb.jpg" alt="im dropping out" class="image" ontouchstart="">
+  						<div class="overlay" ontouchstart=""> 
     						<div class="text"><em><strong>I'm Dropping Out</strong></em></div>
     					</div>
 				</div>
@@ -175,6 +176,7 @@
  		<li><a href="https://music.apple.com/us/artist/josh/1490043431" target="_blank"><h4 class="apple">APPLE MUSIC</h4></a></li>
  		<li><a href="https://music.youtube.com/playlist?list=OLAK5uy_k5OBa65mMx-S1DIfI7xTIzwpTtlO7gg-8" target="_blank"><h4 class="youtube">YOUTUBE MUSIC</h4></a></li>
  	</ul>
+
  </div>
 
  <div class="glass">
