--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>josh's songs</title>
+		<title>josh the rapper</title>
 		<link href="main.css" rel="stylesheet" type="text/css" />
 		<link rel="stylesheet" href="https://use.typekit.net/dgm1icd.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
